2009-09-29  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Handle get/set of behaviour if no favourites found.
	  Hide the "Ask before..." expander and children since nothing in
	  there is implemented on nwamd side.
	* capplet/nwam_wireless_chooser.c: 
	  Set a busy cursor while waiting for scan data to be filled.
	* common/nwamui_daemon.c: 
	  Queue up wifi scan events, sending only one one event per network.
	* daemon/main.c: 
	  Remove nwamui_prof settings from here and put in status_icon.c since
	  they are used there.
	* capplet/Makefile.am:
	  Add wireless_chooser_dialog to the libcapplet library, so it can be
	  used in the daemon.
	* daemon/status_icon.c: 
	  Handle the configured behaviour where no favourites networks are
	  found. Don't show a notify message, just the wireless chooser
	  dialog, if set.
	* data/nwam-manager.schemas.in:
	  Add schema entry for configuration key action_on_no_fav_networks.
	  Default is to show the wireless chooser dialog.
	* common/nwamui_prof.c, common/nwamui_prof.h:
	  Add enum for action types if no favourite networks are found.
	* nwam_core/usr/include/inetcfg.h:
	  Update to latest header.
	* common/libnwamui.c, common/libnwamui.h:
	  Add utility functions to set the busy cursor, and restore to default.

2009-09-25  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.11.
	* nwam_core/usr/include/libnwam.h, nwam_core/lib/i386/libnwam.so.1,
	  nwam_core/lib/sparc/libnwam.so.1:
	  Bump to 09/23 build since there was an API change again in the event
	  structure where a new field was added.
	* nwam_core/usr/include/libdladm.h,
	  nwam_core/usr/include/libdladm_impl.h,
	  nwam_core/usr/include/libdllink.h,
	  nwam_core/usr/include/sys/dls_mgmt.h,
	  nwam_core/usr/include/sys/mac.h:
	  Updated to match snv_124 versions.

2009-09-22  Darren Kenny  <darren.kenny@sun.com>

	* ui/Makefile.am:
	  Fix missing .ui files from EXTRA_DIST.
